k8s-manifests/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: readers-haven
  labels:
    name: readers-haven
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
