k8s-manifests/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: readers-haven
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: mongo-storage
        hostPath:
          path: /run/desktop-host/data/mongo
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: readers-haven
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
